--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -15,6 +15,16 @@ body {
     margin: 0;
     /* Remove qualquer margem do body */
 }
+.tag-topo {
+    position: absolute;
+    top: 10px;
+    left: 30px;
+    background-color: transparent;
+    color: white;
+    padding: 12px;
+    border-radius: 5px;
+    z-index: 1000; /* Garante que esteja sobre outros elementos */
+}
 
 .pagamento {
     margin-left: 30px;
@@ -47,14 +57,28 @@ body {
 .ajuda div {
     background-color: transparent;
 }
-
-.button-group {
-    padding-right: 20px;
-    margin-right: 30px;
+.button-group, .button-group-2 {
     display: flex;
     align-items: center;
-    /* Alinha os itens ao centro verticalmente */
+    justify-content: space-between;
+    width: 100%;
+    max-width: 800px; /* Largura fixa */
+    gap: 10px;
+    margin: 0 auto; /* Centraliza na página */
+    padding: 20px;
 }
+
+
+.typography-data-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 680px;
+    max-width: 800px; /* Mesma largura para centralização */
+    margin-top: 5px;
+    gap: 10px;
+}
+
 
 .tabelas-taxas {
     display: block;
@@ -204,26 +228,25 @@ button.selecionar-taxa {
 }
 .dropdown-container {
     position: relative;
-    width: 150px; /* ajuste a largura conforme necessário */
-padding-left: 20px;
-margin-top: 30px;
-margin-left: 150px;
+    width: 200px; /* ajuste a largura conforme necessário */
+    padding-left: 20px;
+    margin-top: 30px;
+    margin-left: 150px;
+}
 
-  }
-  
-  .dropdown {
+.dropdown {
     width: 100%;
     padding: 10px;
     background-color: transparent;
     color: #ffffff;
-    border-bottom: white;
     appearance: none;
     font-size: 16px;
     border-radius: 4px;
     cursor: pointer;
-  }
-  
-  .dropdown-container::after {
+    border: 2px solid white; /* adiciona a borda branca */
+}
+
+.dropdown-container::after {
     content: '▼'; /* seta */
     position: absolute;
     right: 10px;
@@ -231,12 +254,12 @@ margin-left: 150px;
     transform: translateY(-50%);
     color: gray; /* cor da seta */
     pointer-events: none; /* evita clique na seta */
-  }
+}
   
   .img-dropdown img{
     margin-left: 150px;
   }
-  .ajuda-btn {
+  .ajuda-btn button{
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -245,17 +268,6 @@ margin-left: 150px;
     transition: transform 0.2s ease;
     margin-left: 20px;
     background-color: #08fe95;
-
-}
-.ajuda-btn-2 {
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    padding: 10px;
-    margin-top: 15px;
-    transition: transform 0.2s ease;
-    margin-left: 20px;
-    background-color: #4d4d4c5d;
 
 }
 .ajuda-btn {
