--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,9 +1,7 @@
 body {
     background-image: url('./../../public/assets/fundo_profile.png') !important;
     background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     font-family: Arial, sans-serif;
     color: #fff;
     margin: 0;
@@ -14,16 +12,15 @@ body {
     justify-content: center;
 }
 
+
 /* Div para a barra do topo */
 .top-bar {
-    background-image: url('./../../public/assets/barra.png') !important;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 75px;
     /* Altura da barra */
-    background-color: rgba(0, 0, 0, 0.7);
     /* Fundo semi-transparente */
     display: flex;
     align-items: center;
@@ -54,31 +51,30 @@ body {
     color: #08fe95;
 }
 
+
 .pagamento {
+    margin-top: 110px;
     margin-left: 30px;
-    /* background-color: #414040; */
-    background-color: white;
+    background-color: #30302f80;
     width: 100%;
     display: 'flex';
-    justify-content: 'space-between';
     align-items: 'center';
-    gap: '10px';
-    height: 50%;
-    background-color: #30302f80;
     border-radius: 15px;
-    margin-top: 80px;
+    justify-content: 'space-between';
+    gap: 10px;
+    height: 45%;
+
 }
 
 
+
 .ajuda {
-    margin-top: 80px;
     /* background-color: #414040; */
+    margin-top: 30px;
     width: 100%;
     display: 'flex';
-    justify-content: 'space-between';
     align-items: 'center';
-    gap: '10px';
-    height: 90% !important;
+    flex-direction: column;
     background-color: #30302f80;
     border-radius: 15px;
 }
@@ -118,12 +114,11 @@ body {
     display: block;
 
     margin-left: 30px;
-    margin-top: 20px;
+    margin-top: 100px;
     width: '100%';
     justify-content: 'space-between';
     align-items: 'center';
     gap: '10px';
-    height: '100%';
     background-color: #30302f80;
     border-radius: 15px;
     align-items: center;
