--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,11 +1,10 @@
 body {
     background-image: url('./../../public/assets/fundo_profile.png') !important;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
     color: #fff;
     margin: 0;
-    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
