--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -5,7 +5,8 @@ body {
     font-family: Arial, sans-serif;
     color: #fff;
     margin: 0;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,17 +49,17 @@ body {
 }
 
 .pagamento {
-    margin-top: 10px !important;
+    margin-top: 100px !important;
     margin-left: 30px !important;
     background-color: #30302f80 !important;
     width: 100% !important;
     border-radius: 15px !important;
     gap: 10px !important;
-    height: 50vh !important;
+    height: 45vh !important;
 }
 
 .ajuda {
-    margin-top: 30px !important;
+    margin-top: 80px !important;
     width: 100vh !important;
     flex-direction: column !important;
     background-color: #30302f80 !important;
