--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,7 +1,9 @@
 body {
     background-image: url('./../../public/assets/fundo_profile.png') !important;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: cover; /* A imagem irá cobrir todo o fundo */
+    background-position: center; /* A imagem será centralizada */
+    background-repeat: no-repeat; /* Impede que a imagem se repita */
+    background-attachment: fixed; /* Fixa o background durante o scroll */
     font-family: Arial, sans-serif;
     color: #fff;
     margin: 0;
@@ -55,7 +57,6 @@ body {
     width: 100% !important;
     border-radius: 15px !important;
     gap: 10px !important;
-    height: 45vh !important;
 }
 
 .ajuda {
