--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,18 +1,28 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     background-image: url('./../../public/assets/fundo_profile.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; /* Fixa o fundo */
+    background-attachment: fixed;
     font-family: Arial, sans-serif;
     color: #fff;
-    margin: 0;
-    min-height: 100vh; /* Garante que o body cubra toda a altura da viewport */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
 }
 
+.pagamento, .ajuda, .tabelas-taxas, .button-group, .button-group-2, .typography-data-container, .tabelas {
+    max-height: 100vh; /* Garante que o conteúdo não ultrapasse a altura da viewport */
+    overflow-y: auto; /* Permite rolagem interna caso o conteúdo exceda o espaço */
+    box-sizing: border-box;
+}
 
 /* Div para a barra do topo */
 .top-bar {
