--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -4,7 +4,7 @@ body {
     background-image: url('./../../public/assets/fundo_profile.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment:scroll;
     font-family: Arial, sans-serif;
     color: #fff;
     display: flex;
