--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -18,7 +18,7 @@ body {
 
 /* Div para a barra do topo */
 .top-bar {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
