--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -17,8 +17,6 @@ body {
 }
 
 /* Div para a barra do topo */
-/* Div para a barra do topo */
-/* Div para a barra do topo */
 .top-bar {
     width: 100%;
     height: 75px;
@@ -28,9 +26,8 @@ body {
     padding: 0 20px;
     color: white;
     background-color: #30302f; /* Cor de fundo */
-    z-index: 1000;
+    z-index: 1; /* Apenas para manter a barra acima do conteúdo, se necessário */
 }
-
 
 /* Estilo para o link e texto */
 .tag-topo {
