--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,10 +1,8 @@
-
-
 body {
     background-image: url('./../../public/assets/fundo_profile.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment:local;
+    background-attachment: local;
     font-family: Arial, sans-serif;
     color: #fff;
     display: flex;
@@ -13,22 +11,28 @@ body {
     justify-content: flex-start;
 }
 
-.pagamento, .ajuda, .tabelas-taxas, .button-group, .button-group-2, .typography-data-container, .tabelas {
-}
+.pagamento,
+.ajuda,
+.tabelas-taxas,
+.button-group,
+.button-group-2,
+.typography-data-container,
+.tabelas {}
 
 /* Div para a barra do topo */
 .top-bar {
     width: 100%;
     height: 75px;
-    top: 0;
-    left: 0;
+    margin-right: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     color: white;
-    background-color: transparent; /* Cor de fundo */
-    z-index: 1; /* Apenas para manter a barra acima do conteúdo, se necessário */
+    background-color: transparent;
+    /* Cor de fundo */
+    z-index: 1;
+    /* Apenas para manter a barra acima do conteúdo, se necessário */
 }
 
 /* Estilo para o link e texto */
