--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,8 +1,10 @@
+
+
 body {
     background-image: url('./../../public/assets/fundo_profile.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: local;
+    background-attachment:local;
     font-family: Arial, sans-serif;
     color: #fff;
     display: flex;
@@ -11,29 +13,23 @@ body {
     justify-content: flex-start;
 }
 
-.pagamento,
-.ajuda,
-.tabelas-taxas,
-.button-group,
-.button-group-2,
-.typography-data-container,
-.tabelas {}
+.pagamento, .ajuda, .tabelas-taxas, .button-group, .button-group-2, .typography-data-container, .tabelas {
+}
 
 /* Div para a barra do topo */
 .top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 75px;
-    margin-right: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     color: white;
+    z-index: 1000;
     background-color: transparent;
-    /* Cor de fundo */
-    z-index: 1;
-    padding-bottom: 75px;
-    /* Apenas para manter a barra acima do conteúdo, se necessário */
 }
 
 /* Estilo para o link e texto */
@@ -67,7 +63,7 @@ body {
 }
 
 .ajuda {
-    margin-top: 50px !important;
+    margin-top: 25px !important;
     width: 100vh !important;
     flex-direction: column !important;
     background-color: #30302f80 !important;
