--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -7,7 +7,7 @@ body {
     background-attachment:local;
     font-family: Arial, sans-serif;
     color: #fff;
-    display: flex;
+    display: block; /* Alterado para block */
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
