--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -12,6 +12,16 @@ body {
     align-items: center;
     justify-content: flex-start;
 }
+.container-profile {
+    width: 90%; /* Ajuste conforme necessário */
+    max-width: 1200px; /* Limite de largura para centralizar */
+    margin: 0 auto; /* Centraliza o contêiner */
+    padding-top: 75px; /* Compensa a altura da top-bar */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .pagamento, .ajuda, .tabelas-taxas, .button-group, .button-group-2, .typography-data-container, .tabelas {
 }
