--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,57 +1,34 @@
 body {
-    background-image: url('./../../public/assets/fundo_profile.png') !important;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-image: url('./../../public/assets/fundo_profile.png') !important ;
+
+    /* ackground-image: url('/path/to/your/background-image.jpg'); */
+    background-size: 100vw 100vh;
     font-family: Arial, sans-serif;
     color: #fff;
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-}
-
-/* Div para a barra do topo */
-.top-bar {
-    background-image: url('./../../public/assets/barra.png') !important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 75px;
-    /* Altura da barra */
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Fundo semi-transparente */
-    display: flex;
+    /* Centraliza horizontalmente */
     align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    color: white;
-    z-index: 1000;
-    /* Garante que a barra esteja sobre outros elementos */
-}
+    align-content: center;
+    /* Centraliza verticalmente */
+    height: 100vh;
+    /* Garante que o corpo ocupe toda a altura da viewport */
+    margin: 0;
+    /* Remove qualquer margem do body */
+    background-repeat: no-repeat; /* Impede que a imagem se repita */
+    background-position: center center;
+    background-attachment: fixed;
 
-/* Estilo para o link e texto */
+
+}
 .tag-topo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 16px;
-}
-
-.nav-link {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 8px;
-    transition: color 0.3s;
-}
-
-.nav-link:hover {
-    color: #08fe95;
+    position: absolute;
+    top: 10px;
+    left: 30px;
+    background-color: transparent;
+    color: white;
+    padding: 12px;
+    border-radius: 5px;
+    z-index: 1000; /* Garante que esteja sobre outros elementos */
 }
 
 .pagamento {
@@ -86,18 +63,14 @@ body {
 .ajuda div {
     background-color: transparent;
 }
-
-.button-group,
-.button-group-2 {
+.button-group, .button-group-2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 800px;
-    /* Largura fixa */
+    max-width: 800px; /* Largura fixa */
     gap: 10px;
-    margin: 0 auto;
-    /* Centraliza na página */
+    margin: 0 auto; /* Centraliza na página */
     padding: 20px;
 }
 
@@ -107,8 +80,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 680px;
-    max-width: 800px;
-    /* Mesma largura para centralização */
+    max-width: 800px; /* Mesma largura para centralização */
     margin-top: 5px;
     gap: 10px;
 }
@@ -129,13 +101,12 @@ body {
     align-items: center;
     /* Alinha os itens ao centro verticalmente */
 }
-
-.tabelas-taxas h1 {
+.tabelas-taxas h1{
     padding-top: 15px;
-    font-size: medium;
-    display: flex;
-    flex-direction: column;
-    font-weight: bolder;
+font-size: medium;
+display: flex;
+flex-direction: column;
+font-weight: bolder;
 }
 
 .toggle-button {
@@ -158,7 +129,6 @@ body {
     transition: transform 0.2s ease;
     margin-left: 20px;
 }
-
 .toggle-button-tabela img {
     width: 300px;
     height: 500px;
@@ -168,13 +138,11 @@ body {
     width: 180px;
     height: 200px;
 }
-
-.selecionar-taxa div {
+.selecionar-taxa div{
     display: block;
 
 }
-
-.selecionar-taxa h3 {
+.selecionar-taxa h3{
     padding-top: 15px;
     font-size: medium;
     display: flex;
@@ -182,7 +150,6 @@ body {
     margin-left: 30px;
 
 }
-
 button.selecionar-taxa {
     margin-left: 60px;
     /* Afasta o botão horizontalmente das imagens */
@@ -197,7 +164,6 @@ button.selecionar-taxa {
     border-radius: 10px;
     background-color: #08fe95;
 }
-
 .toggle-button-tabela.active {
     transform: scale(1.1);
     border-radius: 10px;
@@ -251,7 +217,7 @@ button.selecionar-taxa {
 .toggle-page-tabela {
     flex: auto;
     width: 60%;
-    background-color: #08fe95;
+    background-color:  #08fe95;
     /* Cor de fundo quando desativado */
     margin-top: 15px;
     border-radius: 10px;
@@ -262,16 +228,13 @@ button.selecionar-taxa {
     padding: 10px;
     transition: transform 0.2s ease;
 }
-
-.tabelas {
+.tabelas{
     display: flex;
 
 }
-
 .dropdown-container {
     position: relative;
-    width: 200px;
-    /* ajuste a largura conforme necessário */
+    width: 200px; /* ajuste a largura conforme necessário */
     padding-left: 20px;
     margin-top: 30px;
     margin-left: 150px;
@@ -286,28 +249,23 @@ button.selecionar-taxa {
     font-size: 16px;
     border-radius: 4px;
     cursor: pointer;
-    border: 2px solid white;
-    /* adiciona a borda branca */
+    border: 2px solid white; /* adiciona a borda branca */
 }
 
 .dropdown-container::after {
-    content: '▼';
-    /* seta */
+    content: '▼'; /* seta */
     position: absolute;
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    color: gray;
-    /* cor da seta */
-    pointer-events: none;
-    /* evita clique na seta */
+    color: gray; /* cor da seta */
+    pointer-events: none; /* evita clique na seta */
 }
-
-.img-dropdown img {
+  
+  .img-dropdown img{
     margin-left: 150px;
-}
-
-.ajuda-btn button {
+  }
+  .ajuda-btn button{
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -318,7 +276,6 @@ button.selecionar-taxa {
     background-color: #08fe95;
 
 }
-
 .ajuda-btn {
     padding-top: 20px;
 
