--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -224,7 +224,7 @@ button.selecionar-taxa {
 .toggle-page-tabela {
     flex: auto;
     width: 60%;
-    background-color: #08fe95;
+    background-color: #09ce78;
     margin-top: 15px;
     border-radius: 10px;
     color: white;
